--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "hunter",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/webpack-numbers.js",
   "scripts": {
     "build": "webpack --config webpack.prod.js",
     "server": "node server.js",
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "clean-webpack-plugin": "^0.1.16",
