--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "webpack-merge": "^4.1.0"
   },
   "dependencies": {
+    "antd": "^2.13.0",
     "react": "^15.6.1",
     "react-dom": "^15.6.1"
   }
