--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "css-loader": "^0.28.7",
     "express": "^4.15.4",
     "file-loader": "^0.11.2",
+    "flux": "^3.1.3",
     "html-webpack-plugin": "^2.30.1",
     "less": "^2.7.2",
     "less-loader": "^4.0.5",
